# minisketch

./: configure.ac
doc/: gen_params.sage
src/: false_positives.h  minisketch.cpp  test-exhaust.cpp
src/fields/: clmul_1byte.cpp  clmul_2bytes.cpp  clmul_3bytes.cpp  clmul_4bytes.cpp  clmul_5bytes.cpp  clmul_6bytes.cpp  clmul_7bytes.cpp  clmul_8bytes.cpp  generic_1byte.cpp  generic_2bytes.cpp  generic_3bytes.cpp  generic_4bytes.cpp  generic_5bytes.cpp  generic_6bytes.cpp  generic_7bytes.cpp  generic_8bytes.cpp
